ss_server/manifests/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ss-server
  namespace: socketserver
spec:
  selector:
    app: ss-server
  ports:
    - name: http
      port: 4521
      targetPort: 4521
      protocol: TCP
