ss_server/manifests/Gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: proxy-resource-gateway
  namespace: socketserver
spec:
  selector:
    istio: ingress
  servers:
    - port:
        number: 4521
        name: http
        protocol: HTTP
      hosts:
        - "*"
